--- a/scraper/Exp 1 Beds and Baths.ipynb
+++ b/scraper/Exp 1 Beds and Baths.ipynb
@@ -130,7 +130,7 @@
    ],
    "source": [
     "# read data into a DataFrame\n",
-    "data = pd.read_csv('SF Listings - Combined.csv', index_col=0)\n",
+    "data = pd.read_csv('climb_listings.csv', index_col=0)\n",
     "data.head()"
    ]
   },
