--- a/scraper/Houston Model.ipynb
+++ b/scraper/Houston Model.ipynb
@@ -11,9 +11,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python2.7/dist-packages/IPython/config.py:13: ShimWarning: The `IPython.config` package has been deprecated. You should import from traitlets.config instead.\n",
+      "/usr/local/lib/python2.7/site-packages/IPython/config.py:13: ShimWarning: The `IPython.config` package has been deprecated. You should import from traitlets.config instead.\n",
       "  \"You should import from traitlets.config instead.\", ShimWarning)\n",
-      "/usr/local/lib/python2.7/dist-packages/IPython/utils/traitlets.py:5: UserWarning: IPython.utils.traitlets has moved to a top-level traitlets package.\n",
+      "/usr/local/lib/python2.7/site-packages/IPython/utils/traitlets.py:5: UserWarning: IPython.utils.traitlets has moved to a top-level traitlets package.\n",
       "  warn(\"IPython.utils.traitlets has moved to a top-level traitlets package.\")\n"
      ]
     }
@@ -91,7 +91,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6723 rows affected.\n"
+      "6760 rows affected.\n"
      ]
     }
    ],
@@ -143,6 +143,15 @@
     "data = query.DataFrame()\n",
     "data_copy = data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
