--- a/scraper/Tuscon Model.ipynb
+++ b/scraper/Tuscon Model.ipynb
@@ -129,7 +129,7 @@
     "property_transaction_logs.date_closed is not null AND \\\n",
     "properties.id = property_neighborhoods.property_id AND \\\n",
     "neighborhoods.id = property_neighborhoods.neighborhood_id AND \\\n",
-    "neighborhoods.shapefile_source = \"TUSCAN\" AND  \\\n",
+    "neighborhoods.shapefile_source = \"TUSCON\" AND  \\\n",
     "properties.sqft > 0 AND \\\n",
     "properties.bedrooms IS NOT NULL AND \\\n",
     "properties.bathrooms IS NOT NULL AND \\\n",
