--- a/scraper/SF Model v4.ipynb
+++ b/scraper/SF Model v4.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -93,76 +93,76 @@
     }
    ],
    "source": [
-    "query = %sql (\\\n",
-    "SELECT  \\\n",
-    "properties.id as 'property_id', \\\n",
-    "properties.address,  \\\n",
-    "properties.bedrooms,  \\\n",
-    "properties.bathrooms,  \\\n",
-    "properties.sqft,  \\\n",
-    "properties.source,  \\\n",
-    "properties.origin_url,  \\\n",
-    "properties.longitude,  \\\n",
-    "properties.latitude,  \\\n",
-    "properties.elevation,  \\\n",
-    "(2016 - properties.year_built) as 'age',  \\\n",
-    "properties.garage,  \\\n",
-    "properties.level,  \\\n",
-    "properties.luxurious,  \\\n",
-    "properties.dist_to_park,  \\\n",
-    "properties.zipcode, \\\n",
-    "properties.dist_to_golf_course, \\\n",
-    "properties.near_golf_course, \\\n",
-    "properties.has_pool, \\\n",
-    "properties.home_type, \\\n",
-    "property_transaction_logs.id 'ptl_id',  \\\n",
-    "property_transaction_logs.transaction_type,  \\\n",
-    "property_transaction_logs.price,  \\\n",
-    "property_transaction_logs.transaction_status,  \\\n",
-    "property_transaction_logs.days_on_market,  \\\n",
-    "property_transaction_logs.date_closed as 'date',  \\\n",
-    "property_transaction_logs.date_listed,  \\\n",
-    "neighborhoods.name as 'neighborhood',  \\\n",
-    "neighborhoods.id as 'nid',  \\\n",
-    "neighborhoods.shapefile_source,  \\\n",
-    "property_school_districts.school_district_id \\\n",
-    "FROM  \\\n",
-    "properties,  \\\n",
-    "property_transaction_logs,  \\\n",
-    "property_neighborhoods,  \\\n",
-    "neighborhoods,  \\\n",
-    "property_school_districts \\\n",
-    "WHERE  \\\n",
-    "property_school_districts.property_id = properties.id AND  \\\n",
-    "property_transaction_logs.property_id = properties.id AND  \\\n",
-    "property_transaction_logs.transaction_type = \"rental\" AND  \\\n",
-    "property_transaction_logs.date_closed is not null AND \\\n",
-    "neighborhoods.shapefile_source = \"SF\" AND  \\\n",
-    "properties.id = property_neighborhoods.property_id AND  \\\n",
-    "property_neighborhoods.neighborhood_id = neighborhoods.id AND \\\n",
-    "properties.sqft > 0 AND \\\n",
-    "properties.bedrooms IS NOT NULL AND \\\n",
-    "properties.bathrooms IS NOT NULL AND \\\n",
-    "properties.elevation IS NOT NULL AND \\\n",
-    "properties.level IS NOT NULL AND \\\n",
-    "properties.dist_to_park IS NOT NULL AND \\\n",
-    "properties.near_golf_course IS NOT NULL AND \\\n",
-    "properties.home_type IS NOT NULL AND \\\n",
-    "properties.zipcode IS NOT NULL AND \\\n",
-    "properties.sqft IS NOT NULL AND \\\n",
-    "properties.year_built IS NOT NULL AND \\\n",
-    "property_transaction_logs.price > 0 )\n",
+    "# query = %sql (\\\n",
+    "# SELECT  \\\n",
+    "# properties.id as 'property_id', \\\n",
+    "# properties.address,  \\\n",
+    "# properties.bedrooms,  \\\n",
+    "# properties.bathrooms,  \\\n",
+    "# properties.sqft,  \\\n",
+    "# properties.source,  \\\n",
+    "# properties.origin_url,  \\\n",
+    "# properties.longitude,  \\\n",
+    "# properties.latitude,  \\\n",
+    "# properties.elevation,  \\\n",
+    "# (2016 - properties.year_built) as 'age',  \\\n",
+    "# properties.garage,  \\\n",
+    "# properties.level,  \\\n",
+    "# properties.luxurious,  \\\n",
+    "# properties.dist_to_park,  \\\n",
+    "# properties.zipcode, \\\n",
+    "# properties.dist_to_golf_course, \\\n",
+    "# properties.near_golf_course, \\\n",
+    "# properties.has_pool, \\\n",
+    "# properties.home_type, \\\n",
+    "# property_transaction_logs.id 'ptl_id',  \\\n",
+    "# property_transaction_logs.transaction_type,  \\\n",
+    "# property_transaction_logs.price,  \\\n",
+    "# property_transaction_logs.transaction_status,  \\\n",
+    "# property_transaction_logs.days_on_market,  \\\n",
+    "# property_transaction_logs.date_closed as 'date',  \\\n",
+    "# property_transaction_logs.date_listed,  \\\n",
+    "# neighborhoods.name as 'neighborhood',  \\\n",
+    "# neighborhoods.id as 'nid',  \\\n",
+    "# neighborhoods.shapefile_source,  \\\n",
+    "# property_school_districts.school_district_id \\\n",
+    "# FROM  \\\n",
+    "# properties,  \\\n",
+    "# property_transaction_logs,  \\\n",
+    "# property_neighborhoods,  \\\n",
+    "# neighborhoods,  \\\n",
+    "# property_school_districts \\\n",
+    "# WHERE  \\\n",
+    "# property_school_districts.property_id = properties.id AND  \\\n",
+    "# property_transaction_logs.property_id = properties.id AND  \\\n",
+    "# property_transaction_logs.transaction_type = \"rental\" AND  \\\n",
+    "# property_transaction_logs.date_closed is not null AND \\\n",
+    "# neighborhoods.shapefile_source = \"SF\" AND  \\\n",
+    "# properties.id = property_neighborhoods.property_id AND  \\\n",
+    "# property_neighborhoods.neighborhood_id = neighborhoods.id AND \\\n",
+    "# properties.sqft > 0 AND \\\n",
+    "# properties.bedrooms IS NOT NULL AND \\\n",
+    "# properties.bathrooms IS NOT NULL AND \\\n",
+    "# properties.elevation IS NOT NULL AND \\\n",
+    "# properties.level IS NOT NULL AND \\\n",
+    "# properties.dist_to_park IS NOT NULL AND \\\n",
+    "# properties.near_golf_course IS NOT NULL AND \\\n",
+    "# properties.home_type IS NOT NULL AND \\\n",
+    "# properties.zipcode IS NOT NULL AND \\\n",
+    "# properties.sqft IS NOT NULL AND \\\n",
+    "# properties.year_built IS NOT NULL AND \\\n",
+    "# property_transaction_logs.price > 0 )\n",
     "           \n",
     "    \n",
-    "# properties.has_pool IS NOT NULL AND \\\n",
-    "# properties.garage IS NOT NULL AND \\\n",
-    "data = query.DataFrame()\n",
-    "data_copy = data"
+    "# # properties.has_pool IS NOT NULL AND \\\n",
+    "# # properties.garage IS NOT NULL AND \\\n",
+    "# data = query.DataFrame()\n",
+    "# data_copy = data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -171,7 +171,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1204 rows affected.\n"
+      "383 rows affected.\n"
      ]
     }
    ],
