--- a/scraper/PHX sales model.ipynb
+++ b/scraper/PHX sales model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 394,
    "metadata": {
     "collapsed": false
    },
@@ -21,7 +21,7 @@
        "'Connected: prod@rental_nerd'"
       ]
      },
-     "execution_count": 382,
+     "execution_count": 394,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 395,
    "metadata": {
     "collapsed": false
    },
@@ -122,7 +122,7 @@
     "property_school_districts.`property_id` = properties.`id` \\\n",
     "order by \\\n",
     "property_transaction_logs.id desc \\\n",
-    "limit 100000)\n",
+    "limit 1000000)\n",
     "\n",
     "sales_train = query.DataFrame()"
    ]
@@ -136,6 +136,10 @@
    "outputs": [],
    "source": [
     "sales_train = sanitize(sales_train)\n",
+    "\n",
+    "# remove for rent listings that are categorized as for sale\n",
+    "sales_train = sales_train[sales_train.price > 50000]\n",
+    "\n",
     "dtrain = xgb.DMatrix(sales_train[factors].values, label=sales_train.price)\n",
     "bst = xgb.train( plst, dtrain, num_round )"
    ]
@@ -181,8 +185,11 @@
    "source": [
     "# use today's date for 'close date'\n",
     "for_sale.date_closed = date.today()\n",
-    "\n",
     "for_sale = sanitize(for_sale)\n",
+    "\n",
+    "# remove for rent listings that are categorized as for sale\n",
+    "for_sale = for_sale[for_sale.price > 50000]\n",
+    "\n",
     "target = xgb.DMatrix( for_sale[factors].values)\n",
     "ypred = bst.predict(target)"
    ]
@@ -203,6 +210,7 @@
     "                         ,ypred-for_sale.price))\n",
     "output = pd.DataFrame(values[:,1:],index=values[:,0],columns=['address','ypred','list','gain-loss'])\n",
     "output = output.sort_values(by='gain-loss',ascending=False)\n",
+    "\n",
     "output.head(20)"
    ]
   },
@@ -277,7 +285,9 @@
    "outputs": [],
    "source": [
     "# combine rent predictions to homes listed for sale\n",
-    "pd.concat([output,ypred, cr],axis=1)"
+    "best_of = pd.concat([output,ypred, cr],axis=1)\n",
+    "best_of = best_of[ best_of['gain-loss'] < 50000]\n",
+    "best_of.head(30)"
    ]
   },
   {
