--- a/scraper/PHX sales model.ipynb
+++ b/scraper/PHX sales model.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 515,
    "metadata": {
     "collapsed": false
    },
@@ -136,22 +136,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 516,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "495274 rows affected.\n"
+     ]
+    }
+   ],
    "source": [
     "sales_train = query('sales','closed', city, limit)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 517,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entries before filter:  495274\n",
+      "Entries after filter:  445101\n"
+     ]
+    }
+   ],
    "source": [
     "sales_train = sanitize(sales_train)\n",
     "\n",
@@ -164,22 +181,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 518,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "34576 rows affected.\n"
+     ]
+    }
+   ],
    "source": [
     "for_sale = query('sales','open',city,limit)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 519,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entries before filter:  34576\n",
+      "Entries after filter:  25647\n"
+     ]
+    }
+   ],
    "source": [
     "# use today's date for 'close date' since the transaction is still open i.e. home is currently listed for sale\n",
     "for_sale.date_closed = date.today()\n",
@@ -194,12 +228,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 520,
    "metadata": {
     "collapsed": false,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "too many indices for array",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-520-4ab28f740d92>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m values = np.column_stack((for_sale.property_id.values[:,-1]\n\u001b[0m\u001b[1;32m      2\u001b[0m                          \u001b[0;34m,\u001b[0m\u001b[0mfor_sale\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maddress\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m                          \u001b[0;34m,\u001b[0m\u001b[0mypred\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m                          \u001b[0;34m,\u001b[0m\u001b[0mfor_sale\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprice\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m                          ,ypred-for_sale.price))\n",
+      "\u001b[0;31mIndexError\u001b[0m: too many indices for array"
+     ]
+    }
+   ],
    "source": [
     "values = np.column_stack((for_sale.property_id.values[:,-1]\n",
     "                         ,for_sale.address.values\n",
