phx sales model (6 hours of compute)

--- a/scraper/incremental update model.ipynb
+++ b/scraper/incremental update model.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -162,12 +162,12 @@
    "source": [
     "# load sales model\n",
     "bst = xgb.Booster() #init model\n",
-    "bst.load_model(city + '_sales_.model')"
+    "bst.load_model(city + '_sales.model')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -429,7 +429,7 @@
        "1534964   43114.6  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -502,123 +502,6 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1854635</th>\n",
-       "      <td>13766 W Roanoke Ave, Goodyear, AZ 85395</td>\n",
-       "      <td>328128</td>\n",
-       "      <td>278900</td>\n",
-       "      <td>49227.9</td>\n",
-       "      <td>4043.994873</td>\n",
-       "      <td>0.173998</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1553225</th>\n",
-       "      <td>392 W Redwood Dr, Chandler, AZ 85248</td>\n",
-       "      <td>318325</td>\n",
-       "      <td>270000</td>\n",
-       "      <td>48325.4</td>\n",
-       "      <td>2911.082031</td>\n",
-       "      <td>0.129381</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4631888</th>\n",
-       "      <td>17766 W Corpus Christi Ct, Goodyear, AZ 85338</td>\n",
-       "      <td>251153</td>\n",
-       "      <td>203000</td>\n",
-       "      <td>48153.3</td>\n",
-       "      <td>3173.777344</td>\n",
-       "      <td>0.187612</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2080259</th>\n",
-       "      <td>35190 S Cow Creek Rd, Morristown, AZ 85342</td>\n",
-       "      <td>293558</td>\n",
-       "      <td>249000</td>\n",
-       "      <td>44558.1</td>\n",
-       "      <td>2924.753906</td>\n",
-       "      <td>0.140952</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1534964</th>\n",
-       "      <td>10144 E Minnesota Ave, Sun Lakes, AZ 85248</td>\n",
-       "      <td>205115</td>\n",
-       "      <td>162000</td>\n",
-       "      <td>43114.6</td>\n",
-       "      <td>21801.419922</td>\n",
-       "      <td>1.61492</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7386216</th>\n",
-       "      <td>6250 W Wood St # 00, Phoenix, AZ 85043</td>\n",
-       "      <td>142460</td>\n",
-       "      <td>100000</td>\n",
-       "      <td>42460.3</td>\n",
-       "      <td>61305.246094</td>\n",
-       "      <td>7.35663</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1094211</th>\n",
-       "      <td>802 E Monterey St, Chandler, AZ 85225</td>\n",
-       "      <td>297106</td>\n",
-       "      <td>254900</td>\n",
-       "      <td>42206.4</td>\n",
-       "      <td>86875.632812</td>\n",
-       "      <td>4.08987</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>555432</th>\n",
-       "      <td>2310 W Madison St, Phoenix, AZ 85009</td>\n",
-       "      <td>192137</td>\n",
-       "      <td>149995</td>\n",
-       "      <td>42142.5</td>\n",
-       "      <td>3025.828125</td>\n",
-       "      <td>0.242074</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1003843</th>\n",
-       "      <td>2700 E Chester Dr, Chandler, AZ 85286</td>\n",
-       "      <td>310532</td>\n",
-       "      <td>269000</td>\n",
-       "      <td>41532</td>\n",
-       "      <td>3173.777344</td>\n",
-       "      <td>0.141581</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1855625</th>\n",
-       "      <td>2700 N 138th Ave, Goodyear, AZ 85395</td>\n",
-       "      <td>289639</td>\n",
-       "      <td>249000</td>\n",
-       "      <td>40639.1</td>\n",
-       "      <td>3173.777344</td>\n",
-       "      <td>0.152953</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1855625</th>\n",
-       "      <td>2700 N 138th Ave, Goodyear, AZ 85395</td>\n",
-       "      <td>289639</td>\n",
-       "      <td>249000</td>\n",
-       "      <td>40639.1</td>\n",
-       "      <td>61404.855469</td>\n",
-       "      <td>2.95927</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>297318</th>\n",
-       "      <td>2854 E Clarendon Ave, Phoenix, AZ 85016</td>\n",
-       "      <td>221818</td>\n",
-       "      <td>181500</td>\n",
-       "      <td>40318.3</td>\n",
-       "      <td>2911.082031</td>\n",
-       "      <td>0.192468</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1038783</th>\n",
-       "      <td>4137 E Karsten Dr, Chandler, AZ 85249</td>\n",
-       "      <td>305306</td>\n",
-       "      <td>265000</td>\n",
-       "      <td>40306.1</td>\n",
-       "      <td>-3715.824951</td>\n",
-       "      <td>-0.168264</td>\n",
-       "    </tr>\n",
        "    <tr>\n",
        "      <th>5228701</th>\n",
        "      <td>11302 S Oakwood Dr, Goodyear, AZ 85338</td>\n",
@@ -663,15 +546,6 @@
        "      <td>31967.8</td>\n",
        "      <td>9324.691406</td>\n",
        "      <td>0.62687</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7384956</th>\n",
-       "      <td>25 N Cottonwood St UNIT 49, Chandler, AZ 85225</td>\n",
-       "      <td>151569</td>\n",
-       "      <td>119900</td>\n",
-       "      <td>31669</td>\n",
-       "      <td>9252.425781</td>\n",
-       "      <td>0.926014</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11796</th>\n",
@@ -772,31 +646,143 @@
        "      <td>1348.459839</td>\n",
        "      <td>0.105838</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1083770</th>\n",
+       "      <td>2955 N Oregon St UNIT 6, Chandler, AZ 85225</td>\n",
+       "      <td>179790</td>\n",
+       "      <td>152900</td>\n",
+       "      <td>26889.7</td>\n",
+       "      <td>1348.459839</td>\n",
+       "      <td>0.105831</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1041593</th>\n",
+       "      <td>4581 E Karsten Dr, Chandler, AZ 85249</td>\n",
+       "      <td>336190</td>\n",
+       "      <td>309900</td>\n",
+       "      <td>26290.4</td>\n",
+       "      <td>1348.459839</td>\n",
+       "      <td>0.0522153</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1875166</th>\n",
+       "      <td>908 E Glenmere Dr, Chandler, AZ 85225</td>\n",
+       "      <td>195916</td>\n",
+       "      <td>170000</td>\n",
+       "      <td>25915.6</td>\n",
+       "      <td>1119.700073</td>\n",
+       "      <td>0.0790376</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>439866</th>\n",
+       "      <td>13465 W Peck Dr, Litchfield Park, AZ 85340</td>\n",
+       "      <td>255567</td>\n",
+       "      <td>229999</td>\n",
+       "      <td>25567.5</td>\n",
+       "      <td>1496.286987</td>\n",
+       "      <td>0.0780675</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1042124</th>\n",
+       "      <td>4662 E Cherry Hills Dr, Chandler, AZ 85249</td>\n",
+       "      <td>289087</td>\n",
+       "      <td>265000</td>\n",
+       "      <td>24087.1</td>\n",
+       "      <td>1267.527222</td>\n",
+       "      <td>0.0573975</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7384585</th>\n",
+       "      <td>1005 E Glenrosa Ave, Phoenix, AZ 85014</td>\n",
+       "      <td>228396</td>\n",
+       "      <td>204900</td>\n",
+       "      <td>23496.4</td>\n",
+       "      <td>1715.769409</td>\n",
+       "      <td>0.100484</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7384932</th>\n",
+       "      <td>1111 W Summit Pl UNIT 18, Chandler, AZ 85224</td>\n",
+       "      <td>173008</td>\n",
+       "      <td>149900</td>\n",
+       "      <td>23108.5</td>\n",
+       "      <td>1423.655151</td>\n",
+       "      <td>0.113968</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1852068</th>\n",
+       "      <td>9204 E Olive Ln N, Sun Lakes, AZ 85248</td>\n",
+       "      <td>294702</td>\n",
+       "      <td>273000</td>\n",
+       "      <td>21702.4</td>\n",
+       "      <td>1423.655151</td>\n",
+       "      <td>0.0625782</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1083366</th>\n",
+       "      <td>2897 E Binner Dr, Chandler, AZ 85225</td>\n",
+       "      <td>311525</td>\n",
+       "      <td>290000</td>\n",
+       "      <td>21524.6</td>\n",
+       "      <td>1423.655151</td>\n",
+       "      <td>0.0589099</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4646249</th>\n",
+       "      <td>1017 E Maryland Ave UNIT 120, Phoenix, AZ 85014</td>\n",
+       "      <td>187318</td>\n",
+       "      <td>166000</td>\n",
+       "      <td>21318.5</td>\n",
+       "      <td>1423.655151</td>\n",
+       "      <td>0.102915</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1041593</th>\n",
+       "      <td>4581 E Karsten Dr, Chandler, AZ 85249</td>\n",
+       "      <td>336190</td>\n",
+       "      <td>314900</td>\n",
+       "      <td>21290.4</td>\n",
+       "      <td>1402.292847</td>\n",
+       "      <td>0.0534376</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1459201</th>\n",
+       "      <td>15617 W Mulberry Dr, Goodyear, AZ 85395</td>\n",
+       "      <td>290150</td>\n",
+       "      <td>269989</td>\n",
+       "      <td>20161.1</td>\n",
+       "      <td>1423.655151</td>\n",
+       "      <td>0.0632761</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>348906</th>\n",
+       "      <td>3524 W Melvin St, Phoenix, AZ 85009</td>\n",
+       "      <td>140038</td>\n",
+       "      <td>119900</td>\n",
+       "      <td>20138.5</td>\n",
+       "      <td>1402.292847</td>\n",
+       "      <td>0.140346</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7384384</th>\n",
+       "      <td>5479 S Joshua Tree Ln, Gilbert, AZ 85298</td>\n",
+       "      <td>345550</td>\n",
+       "      <td>325555</td>\n",
+       "      <td>19994.8</td>\n",
+       "      <td>1642.893433</td>\n",
+       "      <td>0.0605573</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "                                                   address   ypred    list  \\\n",
-       "1854635           13766 W Roanoke Ave, Goodyear, AZ 85395   328128  278900   \n",
-       "1553225              392 W Redwood Dr, Chandler, AZ 85248   318325  270000   \n",
-       "4631888     17766 W Corpus Christi Ct, Goodyear, AZ 85338   251153  203000   \n",
-       "2080259        35190 S Cow Creek Rd, Morristown, AZ 85342   293558  249000   \n",
-       "1534964        10144 E Minnesota Ave, Sun Lakes, AZ 85248   205115  162000   \n",
-       "7386216            6250 W Wood St # 00, Phoenix, AZ 85043   142460  100000   \n",
-       "1094211             802 E Monterey St, Chandler, AZ 85225   297106  254900   \n",
-       "555432               2310 W Madison St, Phoenix, AZ 85009   192137  149995   \n",
-       "1003843             2700 E Chester Dr, Chandler, AZ 85286   310532  269000   \n",
-       "1855625              2700 N 138th Ave, Goodyear, AZ 85395   289639  249000   \n",
-       "1855625              2700 N 138th Ave, Goodyear, AZ 85395   289639  249000   \n",
-       "297318            2854 E Clarendon Ave, Phoenix, AZ 85016   221818  181500   \n",
-       "1038783             4137 E Karsten Dr, Chandler, AZ 85249   305306  265000   \n",
        "5228701            11302 S Oakwood Dr, Goodyear, AZ 85338   251153  213500   \n",
        "1539496             26247 N El Prado, Rio Verde, AZ 85263   278715  245000   \n",
        "7384591             2122 W Windsor Ave, Phoenix, AZ 85009   252816  220000   \n",
        "1931207  12515 W Vista Paseo Dr, Litchfield Park, AZ 85...  317362  284900   \n",
        "959463                   37 S Rita Ln, Chandler, AZ 85226   210468  178500   \n",
-       "7384956    25 N Cottonwood St UNIT 49, Chandler, AZ 85225   151569  119900   \n",
        "11796                 2030 S 174th Ln, Goodyear, AZ 85338   240876  209900   \n",
        "2075691            13871 W Vernon Ave, Goodyear, AZ 85395   256316  226000   \n",
        "43874                 8144 W Gibson Ln, Phoenix, AZ 85043   195482  165900   \n",
@@ -808,27 +794,27 @@
        "1926469               2975 N 151st Ln, Goodyear, AZ 85395   296964  269900   \n",
        "1077156  1961 N Hartford St UNIT 1212, Chandler, AZ 85225   191410  164500   \n",
        "1083770       2955 N Oregon St UNIT 6, Chandler, AZ 85225   179790  152890   \n",
+       "1083770       2955 N Oregon St UNIT 6, Chandler, AZ 85225   179790  152900   \n",
+       "1041593             4581 E Karsten Dr, Chandler, AZ 85249   336190  309900   \n",
+       "1875166             908 E Glenmere Dr, Chandler, AZ 85225   195916  170000   \n",
+       "439866         13465 W Peck Dr, Litchfield Park, AZ 85340   255567  229999   \n",
+       "1042124        4662 E Cherry Hills Dr, Chandler, AZ 85249   289087  265000   \n",
+       "7384585            1005 E Glenrosa Ave, Phoenix, AZ 85014   228396  204900   \n",
+       "7384932      1111 W Summit Pl UNIT 18, Chandler, AZ 85224   173008  149900   \n",
+       "1852068            9204 E Olive Ln N, Sun Lakes, AZ 85248   294702  273000   \n",
+       "1083366              2897 E Binner Dr, Chandler, AZ 85225   311525  290000   \n",
+       "4646249   1017 E Maryland Ave UNIT 120, Phoenix, AZ 85014   187318  166000   \n",
+       "1041593             4581 E Karsten Dr, Chandler, AZ 85249   336190  314900   \n",
+       "1459201           15617 W Mulberry Dr, Goodyear, AZ 85395   290150  269989   \n",
+       "348906                3524 W Melvin St, Phoenix, AZ 85009   140038  119900   \n",
+       "7384384          5479 S Joshua Tree Ln, Gilbert, AZ 85298   345550  325555   \n",
        "\n",
        "        gain-loss          rent   cap rate  \n",
-       "1854635   49227.9   4043.994873   0.173998  \n",
-       "1553225   48325.4   2911.082031   0.129381  \n",
-       "4631888   48153.3   3173.777344   0.187612  \n",
-       "2080259   44558.1   2924.753906   0.140952  \n",
-       "1534964   43114.6  21801.419922    1.61492  \n",
-       "7386216   42460.3  61305.246094    7.35663  \n",
-       "1094211   42206.4  86875.632812    4.08987  \n",
-       "555432    42142.5   3025.828125   0.242074  \n",
-       "1003843     41532   3173.777344   0.141581  \n",
-       "1855625   40639.1   3173.777344   0.152953  \n",
-       "1855625   40639.1  61404.855469    2.95927  \n",
-       "297318    40318.3   2911.082031   0.192468  \n",
-       "1038783   40306.1  -3715.824951  -0.168264  \n",
        "5228701   37653.3  21801.419922    1.22537  \n",
        "1539496   33714.7   3101.267578   0.151899  \n",
        "7384591   32816.3  74515.125000    4.06446  \n",
        "1931207   32462.4   9252.425781   0.389713  \n",
        "959463    31967.8   9324.691406    0.62687  \n",
-       "7384956     31669   9252.425781   0.926014  \n",
        "11796     30976.4   3101.267578     0.1773  \n",
        "2075691   30315.8  61404.855469    3.26043  \n",
        "43874     29582.4   3173.777344   0.229568  \n",
@@ -839,10 +825,24 @@
        "1924468     27771   1535.227417  0.0637465  \n",
        "1926469   27064.2   1535.227417  0.0682576  \n",
        "1077156     26910   1649.729370   0.120345  \n",
-       "1083770   26899.7   1348.459839   0.105838  "
+       "1083770   26899.7   1348.459839   0.105838  \n",
+       "1083770   26889.7   1348.459839   0.105831  \n",
+       "1041593   26290.4   1348.459839  0.0522153  \n",
+       "1875166   25915.6   1119.700073  0.0790376  \n",
+       "439866    25567.5   1496.286987  0.0780675  \n",
+       "1042124   24087.1   1267.527222  0.0573975  \n",
+       "7384585   23496.4   1715.769409   0.100484  \n",
+       "7384932   23108.5   1423.655151   0.113968  \n",
+       "1852068   21702.4   1423.655151  0.0625782  \n",
+       "1083366   21524.6   1423.655151  0.0589099  \n",
+       "4646249   21318.5   1423.655151   0.102915  \n",
+       "1041593   21290.4   1402.292847  0.0534376  \n",
+       "1459201   20161.1   1423.655151  0.0632761  \n",
+       "348906    20138.5   1402.292847   0.140346  \n",
+       "7384384   19994.8   1642.893433  0.0605573  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -850,8 +850,19 @@
    "source": [
     "# combine rent predictions to homes listed for sale\n",
     "best_of = pd.concat([output,ypred, cr],axis=1)\n",
-    "best_of = best_of[ (best_of['gain-loss'] < 50000) & ((best_of['gain-loss'] / best_of.list).abs() < 0.5)]\n",
+    "best_of = best_of[ (best_of['gain-loss'] < 40000) & ((best_of['gain-loss'] / best_of.list).abs() < 0.25)]\n",
     "best_of.head(30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "best_of.to_csv(city+'_target_list.csv')"
    ]
   },
   {
@@ -861,9 +872,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "best_of.to_csv(city+'_target_list.csv')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -871,18 +880,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.0"
   }
  },
  "nbformat": 4,
