--- a/scraper/historical sales model.ipynb
+++ b/scraper/historical sales model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -21,7 +21,7 @@
        "'Connected: prod@rental_nerd'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -180,27 +180,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time to train model:  17566.896312999997\n"
+     ]
+    }
+   ],
    "source": [
     "# train model based on historical sales information\n",
+    "import timeit\n",
+    "start_time = timeit.default_timer()\n",
+    "\n",
     "dtrain = xgb.DMatrix(sales_train[factors].values, label=sales_train.price, feature_names=factors)\n",
     "bst = xgb.train( plst, dtrain, num_round )\n",
     "\n",
+    "elapsed = timeit.default_timer() - start_time\n",
+    "print(\"Time to train model: \", elapsed)\n",
+    "\n",
     "# save model\n",
-    "bst.save_model(city + '_sales_.model')"
+    "bst.save_model(city + '_sales.model')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Report\n",
+      "MAE Score (Train): 31703.234560\n",
+      "R^2: 0.720092\n"
+     ]
+    }
+   ],
    "source": [
     "# predict the training set using the model - note this is in sample testing\n",
     "dtrain_predictions = bst.predict(dtrain)\n",
@@ -214,22 +238,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35183 rows affected.\n"
+     ]
+    }
+   ],
    "source": [
     "for_sale = query('sales', 'open', city, limit)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'today'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-537655e62786>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# use today's date for 'close date' since the transaction is still open i.e. home is currently listed for sale\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mfor_sale\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdate_closed\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdate\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtoday\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mfor_sale\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msanitize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfor_sale\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# remove for rent listings that are categorized as for sale\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'today'"
+     ]
+    }
+   ],
    "source": [
     "# use today's date for 'close date' since the transaction is still open i.e. home is currently listed for sale\n",
     "for_sale.date_closed = date.today()\n",
@@ -373,7 +417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
